plugins/mermaid/plugin/src/test/resources/intention/declarations/member_statement.mermaid
classDiagram
  <error descr="Unresolved class">A</error> : field